<resources>
    <string name="app_name">VK Charitable Donations</string>
    <!-- strings.xml -->
    <string name="text">

У вас пока нет сборов. \n Начните доброе дело.
</string>
    <string name="label">
        Создать сбор
    </string>
    <string name="title">
        Пожертвования
    </string>
    <string name="show_hide_t">
        Целевой сбор
    </string>
    <string name="show_hide_s">
    Когда есть определённая цель
    </string>
<string name="show_hide_r">
    Регульярный сбор
</string>
    <string name="title3">
        Целевой сбор
    </string>
    <string name="enter">
        Далее
    </string>

    <string name="textcard">
        Куда получать деньги
    </string>

    <string-array name="cards">
        <item>VK Pay 7513</item>
        <item>Mastercard 9974</item>
        <item>Visa 2453</item>
        <item>Qiwi 9060</item>
    </string-array>
<string name="load">
    Загрузить обложку
</string>
    <string-array name="authors">
        <item>Нияз Леушкин</item>
    </string-array>


</resources>